fixing scroll on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,8 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%;
+    height: fill-available;
+    height: -webkit-fill-available;
 }
 
 body {
@@ -24,9 +26,8 @@ body {
     line-height: 1.6rem;
 
     min-height: 100vh;
-    min-height: -moz-available;
-    min-height: -webkit-fill-available;
     min-height: fill-available;
+    min-height: -webkit-fill-available;
 
     background: url(../images/bg-desktop.png), $very-dark-blue;
     background-repeat: no-repeat;
